--- a/niudot-app/src/assets/tailwind.css
+++ b/niudot-app/src/assets/tailwind.css
@@ -1,3 +1,32 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@import "tailwindcss/base";
+
+@import "tailwindcss/components";
+
+@import "tailwindcss/utilities";
+
+html, body {
+	width: 100%;
+	height: 100%;
+	font-family: 'Nunito Sans', sans-serif;	
+}
+
+#root, #root > div {
+	height: 100%;
+}
+
+.tailwind-form-field {
+	/*Global*/
+	@apply text-sm p-2 rounded outline-none border-2 border-solid;
+
+	/*Light Theme Defaults*/
+	@apply text-black bg-white border-gray-200;
+
+	/*Light Theme Pseudo-Classes*/
+	@apply focus:bg-gray-100 focus:border-gray-300;
+
+	/*Dark Theme Defaults*/
+	@apply dark:text-gray-text dark:bg-gray-1000 dark:border-gray-1000;
+
+	/*Dark Theme Pseudo-Classes*/
+	@apply dark:focus:bg-gray-1000 dark:focus:border-blue-500;
+}
