--- a/niudot-app/src/assets/pro-sidebar.css
+++ b/niudot-app/src/assets/pro-sidebar.css
@@ -1,70 +1,125 @@
-@keyframes swing {
-  0%, 30%, 50%, 70%, 100% {
-    transform: rotate(0deg);
+@-webkit-keyframes swing {
+  0%,
+  30%,
+  50%,
+  70%,
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
   }
   10% {
-    transform: rotate(10deg);
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg);
   }
   40% {
-    transform: rotate(-10deg);
+    -webkit-transform: rotate(-10deg);
+            transform: rotate(-10deg);
   }
   60% {
-    transform: rotate(5deg);
+    -webkit-transform: rotate(5deg);
+            transform: rotate(5deg);
   }
   80% {
-    transform: rotate(-5deg);
+    -webkit-transform: rotate(-5deg);
+            transform: rotate(-5deg);
   }
 }
+
+@keyframes swing {
+  0%,
+  30%,
+  50%,
+  70%,
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  10% {
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg);
+  }
+  40% {
+    -webkit-transform: rotate(-10deg);
+            transform: rotate(-10deg);
+  }
+  60% {
+    -webkit-transform: rotate(5deg);
+            transform: rotate(5deg);
+  }
+  80% {
+    -webkit-transform: rotate(-5deg);
+            transform: rotate(-5deg);
+  }
+}
+
 .pro-sidebar {
   color: white;
   height: 100%;
   width: 256px;
   min-width: 256px;
   text-align: left;
+  -webkit-transition: width, left, right, 0.3s;
   transition: width, left, right, 0.3s;
   position: relative;
   z-index: 1009;
 }
+
 .pro-sidebar > .pro-sidebar-inner {
   background: #151618;
   height: 100%;
   position: relative;
   z-index: 101;
 }
+
 .pro-sidebar > .pro-sidebar-inner > img.sidebar-bg {
   width: 100%;
   height: 100%;
-  object-fit: cover;
-  object-position: center;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
   position: absolute;
   opacity: 0.3;
   left: 0;
   top: 0;
   z-index: 100;
 }
+
 .pro-sidebar > .pro-sidebar-inner > .pro-sidebar-layout {
   height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   z-index: 101;
 }
+
 .pro-sidebar > .pro-sidebar-inner > .pro-sidebar-layout .pro-sidebar-header {
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
+
 .pro-sidebar > .pro-sidebar-inner > .pro-sidebar-layout .pro-sidebar-content {
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
+
 .pro-sidebar > .pro-sidebar-inner > .pro-sidebar-layout .pro-sidebar-footer {
   border-top: 1px solid rgba(255, 255, 255, 0.2);
 }
+
 .pro-sidebar > .pro-sidebar-inner > .pro-sidebar-layout ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
 }
+
 .pro-sidebar .overlay {
   position: fixed;
   top: 0;
@@ -75,14 +130,17 @@
   z-index: 100;
   display: none;
 }
+
 .pro-sidebar.collapsed {
   width: 5rem;
   min-width: 5rem;
 }
+
 .pro-sidebar.rtl {
   text-align: right;
   direction: rtl;
 }
+
 @media (max-width: 480px) {
   .pro-sidebar.xs {
     position: fixed;
@@ -110,7 +168,8 @@
     right: 0;
   }
 }
-@media (max-width: 678px) {
+
+@media (max-width: 630px) {
   .pro-sidebar.sm {
     position: fixed;
     left: -256px;
@@ -137,6 +196,7 @@
     right: 0;
   }
 }
+
 @media (max-width: 768px) {
   .pro-sidebar.md {
     position: fixed;
@@ -164,6 +224,7 @@
     right: 0;
   }
 }
+
 @media (max-width: 992px) {
   .pro-sidebar.lg {
     position: fixed;
@@ -191,6 +252,7 @@
     right: 0;
   }
 }
+
 @media (max-width: 1200px) {
   .pro-sidebar.xl {
     position: fixed;
@@ -220,7 +282,7 @@
 }
 
 .pro-sidebar .pro-menu .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-inner-item:before {
-  content: "";
+  content: '';
   display: inline-block;
   width: 4px;
   min-width: 4px;
@@ -229,7 +291,8 @@
   border-radius: 50%;
   margin-right: 15px;
   position: relative;
-  box-shadow: 1px 0px 0px white, 0px -1px 0px white, 0px 1px 0px white, -1px 0px 0px white;
+  -webkit-box-shadow: 1px 0px 0px white, 0px -1px 0px white, 0px 1px 0px white, -1px 0px 0px white;
+          box-shadow: 1px 0px 0px white, 0px -1px 0px white, 0px 1px 0px white, -1px 0px 0px white;
 }
 
 .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item > .pro-item-content {
@@ -242,20 +305,24 @@
   padding-top: 10px;
   padding-bottom: 10px;
 }
+
 .pro-sidebar .pro-menu > ul > .pro-sub-menu > .pro-inner-list-item {
   position: relative;
   background-color: #212226;
 }
+
 .pro-sidebar .pro-menu > ul > .pro-sub-menu > .pro-inner-list-item > div > ul {
   padding-top: 15px;
   padding-bottom: 15px;
 }
+
 .pro-sidebar .pro-menu a {
   text-decoration: none;
   color: white;
 }
+
 .pro-sidebar .pro-menu a:before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   right: 0;
@@ -263,36 +330,52 @@
   left: 0;
   background-color: transparent;
 }
+
 .pro-sidebar .pro-menu a:hover {
   color: #3B82F6;
 }
+
 .pro-sidebar .pro-menu .pro-menu-item {
   font-size: 15px;
 }
+
 .pro-sidebar .pro-menu .pro-menu-item.active {
   color: #3B82F6;
 }
+
 .pro-sidebar .pro-menu .pro-menu-item .suffix-wrapper {
   opacity: 1;
+  -webkit-transition: opacity 0.2s;
   transition: opacity 0.2s;
 }
+
 .pro-sidebar .pro-menu .pro-menu-item .prefix-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-right: 5px;
   opacity: 1;
+  -webkit-transition: opacity 0.2s;
   transition: opacity 0.2s;
 }
+
 .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 8px 35px 8px 20px;
   cursor: pointer;
 }
+
 .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item:focus {
   outline: none;
   color: #3B82F6;
 }
+
 .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item > .pro-icon-wrapper {
   margin-right: 10px;
   font-size: 14px;
@@ -303,31 +386,49 @@
   text-align: center;
   display: inline-block;
 }
+
 .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item > .pro-icon-wrapper .pro-icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   height: 100%;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
+
 .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item > .pro-item-content {
-  flex-grow: 1;
-  flex-shrink: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -ms-flex-negative: 1;
+      flex-shrink: 1;
 }
+
 .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item:hover {
   color: #3B82F6;
 }
+
 .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item:hover .pro-icon-wrapper .pro-icon {
-  animation: swing ease-in-out 0.5s 1 alternate;
+  -webkit-animation: swing ease-in-out 0.5s 1 alternate;
+          animation: swing ease-in-out 0.5s 1 alternate;
 }
+
 .pro-sidebar .pro-menu .pro-menu-item.pro-sub-menu > .pro-inner-item:before {
   background: white;
 }
+
 .pro-sidebar .pro-menu .pro-menu-item.pro-sub-menu > .pro-inner-item > .pro-arrow-wrapper {
   position: absolute;
   right: 20px;
   top: 50%;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
 }
+
 .pro-sidebar .pro-menu .pro-menu-item.pro-sub-menu > .pro-inner-item > .pro-arrow-wrapper .pro-arrow {
   display: inline-block;
   border-style: solid;
@@ -335,52 +436,71 @@
   border-width: 0 2px 2px 0;
   padding: 2.5px;
   vertical-align: middle;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
   transition: transform 0.3s;
-  transform: rotate(-45deg);
+  transition: transform 0.3s, -webkit-transform 0.3s;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
 }
+
 .pro-sidebar .pro-menu .pro-menu-item.pro-sub-menu.open > .pro-inner-item:before {
   background: transparent !important;
 }
+
 .pro-sidebar .pro-menu .pro-menu-item.pro-sub-menu.open > .pro-inner-item > .pro-arrow-wrapper .pro-arrow {
-  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
 }
+
 .pro-sidebar .pro-menu .pro-menu-item.pro-sub-menu .pro-inner-list-item {
   padding-left: 20px;
 }
+
 .pro-sidebar .pro-menu .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-inner-item {
   padding: 8px 30px 8px 15px;
 }
+
 .pro-sidebar .pro-menu .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-inner-item > .pro-icon-wrapper {
   display: none;
 }
+
 .pro-sidebar .pro-menu .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-inner-item .pro-arrow-wrapper {
   display: none;
 }
+
 .pro-sidebar .pro-menu.shaped .pro-menu-item > .pro-inner-item > .pro-icon-wrapper {
   background-color: white;
 }
+
 .pro-sidebar .pro-menu.square .pro-menu-item > .pro-inner-item > .pro-icon-wrapper {
   border-radius: 0;
 }
+
 .pro-sidebar .pro-menu.round .pro-menu-item > .pro-inner-item > .pro-icon-wrapper {
   border-radius: 4px;
 }
+
 .pro-sidebar .pro-menu.circle .pro-menu-item > .pro-inner-item > .pro-icon-wrapper {
   border-radius: 50%;
 }
+
 .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item {
   position: relative;
 }
+
 .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item > .pro-inner-item > .suffix-wrapper,
 .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item > .pro-inner-item > .prefix-wrapper {
   opacity: 0;
 }
+
 .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item > .pro-inner-list-item {
   background-color: #151618;
   z-index: 111;
 }
+
 .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item::before {
-  content: "";
+  content: '';
   display: inline-block;
   position: absolute;
   top: 0;
@@ -389,15 +509,19 @@
   right: 0;
   cursor: pointer;
 }
+
 .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu {
   position: relative;
 }
+
 .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu > .pro-inner-item {
   pointer-events: none;
 }
+
 .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu > .pro-inner-item > .pro-arrow-wrapper {
   display: none;
 }
+
 .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu > .pro-inner-list-item {
   height: auto !important;
   position: fixed;
@@ -408,9 +532,11 @@
   max-height: 100%;
   padding-left: 3px;
 }
+
 .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu > .pro-inner-list-item.has-arrow {
   padding-left: 10px;
 }
+
 .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu > .pro-inner-list-item > .popper-inner {
   max-height: 100vh;
   overflow-y: auto;
@@ -418,60 +544,82 @@
   padding-left: 20px;
   border-radius: 4px;
 }
+
 .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu:hover > .pro-inner-list-item {
+  -webkit-transition: visibility, -webkit-transform 0.3s;
+  transition: visibility, -webkit-transform 0.3s;
   transition: visibility, transform 0.3s;
+  transition: visibility, transform 0.3s, -webkit-transform 0.3s;
   visibility: visible;
 }
+
 .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu:hover .pro-icon-wrapper .pro-icon {
-  animation: swing ease-in-out 0.5s 1 alternate;
+  -webkit-animation: swing ease-in-out 0.5s 1 alternate;
+          animation: swing ease-in-out 0.5s 1 alternate;
 }
+
 .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-sub-menu-item,
 .pro-sidebar.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-inner-item {
   padding: 8px 30px 8px 5px;
 }
+
 .pro-sidebar.rtl .pro-menu .pro-menu-item .prefix-wrapper {
   margin-right: 0;
   margin-left: 5px;
 }
+
 .pro-sidebar.rtl .pro-menu .pro-menu-item > .pro-inner-item {
   padding: 8px 20px 8px 35px;
 }
+
 .pro-sidebar.rtl .pro-menu .pro-menu-item > .pro-inner-item > .pro-icon-wrapper {
   margin-right: 0;
   margin-left: 10px;
 }
+
 .pro-sidebar.rtl .pro-menu .pro-menu-item.pro-sub-menu > .pro-inner-item > .pro-arrow-wrapper {
   right: auto;
   left: 20px;
 }
+
 .pro-sidebar.rtl .pro-menu .pro-menu-item.pro-sub-menu > .pro-inner-item > .pro-arrow-wrapper .pro-arrow {
-  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+          transform: rotate(135deg);
 }
+
 .pro-sidebar.rtl .pro-menu .pro-menu-item.pro-sub-menu.open > .pro-inner-item > .pro-arrow-wrapper .pro-arrow {
-  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
 }
+
 .pro-sidebar.rtl .pro-menu .pro-menu-item.pro-sub-menu .pro-inner-list-item {
   padding-left: 0;
   padding-right: 20px;
 }
+
 .pro-sidebar.rtl .pro-menu .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-inner-item {
   padding: 8px 15px 8px 30px;
 }
+
 .pro-sidebar.rtl .pro-menu .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-inner-item:before {
   margin-right: 0;
   margin-left: 15px;
 }
+
 .pro-sidebar.rtl.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu > .pro-inner-list-item {
   padding-left: 0;
   padding-right: 3px;
 }
+
 .pro-sidebar.rtl.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu > .pro-inner-list-item.has-arrow {
   padding-right: 10px;
 }
+
 .pro-sidebar.rtl.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu > .pro-inner-list-item > .popper-inner {
   padding-left: 0;
   padding-right: 20px;
 }
+
 .pro-sidebar.rtl.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-sub-menu-item,
 .pro-sidebar.rtl.collapsed .pro-menu > ul > .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-inner-item {
   padding: 8px 5px 8px 30px;
@@ -486,21 +634,24 @@
   border-bottom: 7px solid transparent;
 }
 
-.popper-element[data-popper-placement^=left] > .popper-arrow {
+.popper-element[data-popper-placement^='left'] > .popper-arrow {
   right: 0;
   border-right: 7px solid #151618;
 }
 
-.popper-element[data-popper-placement^=right] > .popper-arrow {
+.popper-element[data-popper-placement^='right'] > .popper-arrow {
   left: 0;
   border-left: 7px solid #151618;
 }
 
 .react-slidedown {
   height: 0;
+  -webkit-transition-property: none;
   transition-property: none;
-  transition-duration: 0.2s;
-  transition-timing-function: ease-in-out;
+  -webkit-transition-duration: 0.2s;
+          transition-duration: 0.2s;
+  -webkit-transition-timing-function: ease-in-out;
+          transition-timing-function: ease-in-out;
 }
 
 .react-slidedown.transitioning {
@@ -511,7 +662,19 @@
   display: none;
 }
 
-@keyframes swing {}
+@keyframes swing {
+  0%, 30%, 50%, 70%, 100% {
+  }
+  10% {
+  }
+  40% {
+  }
+  60% {
+  }
+  80% {
+  }
+}
+
 li.pro-menu-item.pro-sub-menu.sidebar-item.open > div.pro-inner-item {
   background-color: yellow;
 }
@@ -532,9 +695,15 @@ li.pro-menu-item.pro-sub-menu.sidebar-item.open > div.pro-inner-item {
   position: fixed;
   width: 256px;
   height: 4rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: #151618 !important;
   color: white;
   border-bottom: none !important;
@@ -546,8 +715,10 @@ li.pro-menu-item.pro-sub-menu.sidebar-item.open > div.pro-inner-item {
 }
 
 .sidebar-item {
+  -webkit-transition: background-color 75ms;
   transition: background-color 75ms;
 }
+
 .sidebar-item:hover {
   background-color: pink;
 }
@@ -570,6 +741,7 @@ li.pro-menu-item.pro-sub-menu.sidebar-item.open > div.pro-inner-item {
 
 #root > div > div > div.pro-sidebar.fixed.w-64.shadow-md.sm > div.pro-sidebar-inner > div > div.pro-sidebar-content.tw-sidebar > nav > ul > li > div.pro-inner-item {
   color: white;
+  -webkit-transition: background 75ms;
   transition: background 75ms;
 }
 
@@ -584,3 +756,4 @@ li.pro-menu-item.pro-sub-menu.sidebar-item.open > div.pro-inner-item {
 #root > div > div > div.pro-sidebar.fixed.w-64.shadow-md.sm > div.pro-sidebar-inner > div > div.pro-sidebar-header.tw-sidebar.flex-col-center > h2 {
   color: white;
 }
+/*# sourceMappingURL=pro-sidebar.css.map */
